# real_pick_place

./: .gitignore  run.sh
Yolov5_ros/yolov5_ros/yolov5_ros/launch/: -home-msi-kinova_ws-src-Yolov5_ros-yolov5_ros-yolov5_ros-launch-yolo_v5..txt  yolo_v5.launch
aruco_ros/: global_point.cpp
easy_handeye/docs/example_launch/: panda_realsense_eyeonbase.launch
easy_handeye/easy_handeye/launch/: rviz_easy_handeye.config
gpd_ros/: package.xml
gpd_ros/include/gpd_ros/: grasp_detection_node.h
gpd_ros/launch/: sep.launch  ur5.launch  ur6.launch
gpd_ros/scripts/: launch_gpd.py
gpd_ros/src/: object_tf.cpp
kinova-ros/kinova_bringup/launch/: kinova_robot.launch
kinova-ros/kinova_control/launch/: kinova_rqt（复件）.launch
kinova-ros/kinova_demo/nodes/kinova_demo/: tempCodeRunnerFile.py  testActionSvr.py
kinova-ros/kinova_description/urdf/: j2s7s300.xacro  j2s7s300_.xacro  j2s7s300_standalone.xacro
kinova-ros/kinova_gazebo/worlds/: box.xml  new_world.world  new_world2.world
kinova-ros/kinova_moveit/kinova_arm_moveit_demo/: CMakeLists.txt
kinova-ros/kinova_moveit/kinova_arm_moveit_demo/include/: closely_pick_place.h
kinova-ros/kinova_moveit/kinova_arm_moveit_demo/scpript/: kinova_open_door.py  kinova_path_planning.py  test_closel_pick_place.py
kinova-ros/kinova_moveit/kinova_arm_moveit_demo/src/: closely_pick_place.cpp  my_pick_place.cpp  pick_place.cpp  trans.cpp
kinova-ros/kinova_moveit/robot_configs/j2s7s300_moveit_config/config/: j2s7s300.srdf
kinova-ros/kinova_moveit/robot_configs/j2s7s300_moveit_config/launch/: moveit.rviz  trajectory_execution.launch.xml
kinova-ros/kinova_msgs/msg/: GoalPose.msg
kinova-ros/tao-kinova/: eye_run.sh  open_door.sh  package.xml  true_run.sh  true_walk.sh
kinova-ros/tao-kinova/launch/: test.launch
kinova-ros/tao-kinova/scripts/: quater_to_rotation.py  test.py  trans.py
kinova_unit_app/: package.xml
kinova_unit_app/config/: kinect_easy_handeye_eye_on_base.yaml
kinova_unit_app/launch/: eye_on_base.launch  eye_on_hand.launch  publish.launch
kinova_unit_app/srv/: GetObject.srv
kinova_with_d435/: CMakeLists.txt  package.xml
kinova_with_d435/urdf/: kinova_with_d435.xacro
realsense-ros/realsense2_camera/launch/: rect.launch  rs_d435_camera_with_model.launch
src/Yolov5_ros/yolov5_ros/yolov5_ros/launch/: yolo_v5.launch
src/Yolov5_ros/yolov5_ros/yolov5_ros/scripts/: yolo_v5.py
src/easy_handeye/easy_handeye/src/easy_handeye/: handeye_robot.py
src/gpd_ros/: CMakeLists.txt
src/gpd_ros/launch/: filter.launch
src/gpd_ros/msg/: filter_space.msg
src/gpd_ros/src/gpd_ros/: grasp_plotter.cpp
src/kinova-ros/kinova_bringup/launch/: kinova_robot.launch
src/kinova-ros/kinova_description/urdf/: j2s7s300_standalone.xacro
src/kinova-ros/kinova_driver/src/joint_trajectory_action/: joint_trajectory_action_server.cpp
src/kinova-ros/kinova_gazebo/launch/: robot_launch.launch
src/kinova-ros/kinova_gazebo/worlds/: new.world  new_world1.world
src/kinova-ros/kinova_moveit/kinova_arm_moveit_demo/: CMakeLists.txt  package.xml
src/kinova-ros/kinova_moveit/kinova_arm_moveit_demo/include/: closely_pick_place.h  my_pick_place.h  torque_fun.h
src/kinova-ros/kinova_moveit/kinova_arm_moveit_demo/src/: closely_pick_place.cpp  my_pick_place.cpp
src/kinova-ros/kinova_moveit/robot_configs/j2s7s300_moveit_config/launch/: j2s7s300_demo.launch  moveit.rviz
src/kinova-ros/kinova_msgs/: CMakeLists.txt
src/kinova-ros/tao-kinova/: CMakeLists.txt  fake_run.sh  open_door.sh  run.sh  true_run.sh
src/kinova_unit_app/: CMakeLists.txt
src/kinova_unit_app/launch/: kinova_unit_app.launch
src/kinova_unit_app/script/: jaco2_pick_place.py  kinova_unit_app_node.py  move_client.py  pick_place_demo_2.py
src/kinova_with_d435/launch/: run.launch
src/realsense-ros/realsense2_camera/launch/: rs_camera.launch
