<?xml version="1.0"?>
<package format="2">
  <name>kinova_unit_app</name>
  <version>0.0.0</version>
  <description>The kinova_unit_app package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="hangliu@todo.todo">hangliu</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <build_depend>roslaunch</build_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>kinova_unit_viz</depend>
  <depend>kinova_unit_bringup</depend>
  <depend>kinova_unit_description</depend>
  <depend>kinova_unit_moveit_config</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
